# 20260101_velophil_svelte

./: .gitignore  .temp_keys  task_1.md  task_1_plan_1.md  task_1_plan_2.md  task_1_plan_3.md  task_1_plan_4.md
20260101_velophil_svelte/: .dir_bash_history  .gitignore
20260101_velophil_svelte/backend/: .dir_bash_history  .env.example  .env_cors.production  .gitignore  build.rs
20260101_velophil_svelte/backend/description_backend_data/quoteflow_data/: snap.00000000000001D5
20260101_velophil_svelte/backend/src/: backup.rs  config.rs  db.rs  db_manager.rs  main.rs  time.rs  types.rs  validation.rs
20260101_velophil_svelte/backend/src/handlers/: auth.rs  cookies.rs  users.rs
20260101_velophil_svelte/backend/src/middleware/: security.rs
20260101_velophil_svelte/backend/src/models/: mod.rs
20260101_velophil_svelte/backend/src/routes/: health.rs
20260101_velophil_svelte/frontend/: .gitignore  package.json
20260101_velophil_svelte/frontend/__tests__/: integration.test.ts  mock_server.test.ts  validator.test.ts
20260101_velophil_svelte/frontend/app/public/data/: article.json
20260101_velophil_svelte/frontend/app/src/: App.svelte
20260101_velophil_svelte/frontend/app/src/components/: Figure.svelte  LoginOverlay.svelte  RegisterOverlay.svelte  SettingsPanel.svelte  Status.svelte
20260101_velophil_svelte/frontend/app/src/components/article/: ArticleSection.svelte  ArticleSplitScreen.svelte  ArticleSplitView_container.svelte  Breadcrumbs.svelte  GalleryGrid.svelte  HeroSection.svelte  NavBar.svelte  ParallaxScene.svelte  TextBlock.svelte  VideoPlaceholder.svelte
20260101_velophil_svelte/frontend/app/src/styles/: global.css
20260101_velophil_svelte/frontend/tests/e2e/: claims-manager.spec.ts  use_and_selections.spec.ts
backend/: .env  .env_cors  ACCOMPLISHED.md  Cargo.toml  DEDUPLICATION_PLAN.md  build_dev.sh  static
backend/description_backend_data/quoteflow_data/: db
backend/src/: cli.rs  logging.rs  main_bloated.rs  replicate.rs
backend/src/handlers/: mod.rs
backend/src/models/: auth_types.rs
backend/src/routes/: static_files.rs
frontend/: .gitignore  .temp_keys
frontend/__tests__/: integration_url.test.ts
frontend/app/: index.html
frontend/app/public/data/: article.json
frontend/app/src/: App.svelte  App_bloated.svelte
frontend/app/src/components/: AdminClaimsPanel.svelte  Figure.svelte  KitchenPanel.svelte  WebGLBoard.svelte
frontend/app/src/components/article/: ArticleSplitScreen.svelte  ArticleSplitView_container.svelte  Breadcrumbs.svelte  FooterCta.svelte  HeroSection.svelte  NavBar.svelte  ParallaxScene.svelte  SidebarModules.svelte  TextBlock.svelte
frontend/tests/: api_persistence.test.ts
frontend/tests/e2e/: auth.spec.ts  claims-gating.spec.ts  token-prefill.spec.ts
