[package]
name = "description_backend"
version = "0.1.0"
edition = "2021"

description = "Backend with Rust and Actix Web with database tools and API"
build = "build.rs"



license = "private"
authors = ["Your Name <you@example.com>"]


[dependencies]
# Web framework and CORS
actix-web = "4.4"
actix-cors = "0.7.1"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

# Database
sled = "0.34"
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"

# Process management (Unix signals)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting"] }
tokio-util = "0.7"
futures = "0.3"

paste = "1.0"

libc = "0.2"

futures-util = "0.3"


# Configuration and environment
dotenvy = "0.15"

# HTTP client for payment APIs and crawler
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "cookies"] }
urlencoding = "2.1"
url = "2.5"

# HTML parsing for crawler
scraper = "0.20"
select = "0.6"

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Enhanced logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "ansi"] }
tracing-log = "0.2"
colored = "3"

# Error handling
anyhow = "1.0"

# Auth & crypto
# paseto = "2"  # Removed: using pasetors instead (see below)
password-hash = "0.5"
rand = "0.8"

# Login Password hashing
once_cell = "1.19"
which = "8"
atty = "0.2"
argon2 = "0.5"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"


# JWT for authentication
rand_core = { version = "0.6", features = ["getrandom"] }
# Updated pasetors to 0.7 to fix orion/subtle compatibility issue
pasetors = { version = "0.7", default-features = false, features = ["v4", "std"] }
nanoid = "0.4.0"

# rand_core = { version = "0.9.3", default-features = false, features = ["os_rng", "serde", "std"] }
# pasetors = { version = "0.7.7", default-features = false, features = ["v4", "std"] }

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
temp-env = "0.3"
tempfile = "3.8"

[build-dependencies]
# vergen = { version = "9.0.6", features = ["build", "cargo", "emit_and_set", "rustc", "rustc_version", "sysinfo"] }
vergen = { version = "8.0", features = ["build", "cargo", "git", "gitcl"] }



# Cargo.toml
[profile.release]
opt-level = "z"         # optimize for size
lto = "fat"            #  "thin" or "fat" for a tiny bit smaller, slower link
codegen-units = 1
panic = "abort"
strip = "symbols"       # Rust 1.70+

[profile.release.package."*"]
debug = false